--- a/app/src/main/res/layout/activity_inquiry_hulan.xml
+++ b/app/src/main/res/layout/activity_inquiry_hulan.xml
@@ -1459,6 +1459,7 @@
                 android:padding="12dp">
 
                 <TextView
+                    android:id="@+id/txtPic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="12dp"
@@ -1526,7 +1527,7 @@
                     android:lineSpacingExtra="3dp"
                     android:maxLength="1000"
                     android:minLines="6"
-                    android:hint=""
+                    android:hint="其他内容请在此备注"
                     android:textColor="@color/text_black_color"
                     android:textColorHint="@color/light_gray_color"
                     android:textSize="13sp" />
@@ -1534,45 +1535,57 @@
 
             <View style="@style/LineStyle"/>
 
+
             <LinearLayout
+                android:id="@+id/llTime"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="12dp"
-                    android:text="信息时长"
-                    android:textColor="@color/black_color"
-                    android:textSize="14sp" />
-
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical">
+                    android:layout_height="wrap_content">
 
                     <TextView
-                        android:id="@+id/tv_info_length"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:paddingBottom="12dp"
-                        android:paddingTop="12dp"
-                        android:text="一小时"
+                        android:padding="12dp"
+                        android:text="信息时长"
                         android:textColor="@color/black_color"
                         android:textSize="14sp" />
 
-                    <ImageView
-                        android:layout_width="wrap_content"
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="12dp"
-                        android:src="@mipmap/arrow_right" />
+                        android:gravity="center_vertical">
+
+                        <TextView
+                            android:id="@+id/tv_info_length"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:paddingBottom="12dp"
+                            android:paddingTop="12dp"
+                            android:text="一小时"
+                            android:textColor="@color/black_color"
+                            android:textSize="14sp" />
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="12dp"
+                            android:src="@mipmap/arrow_right" />
+                    </LinearLayout>
+
                 </LinearLayout>
+
+                <View style="@style/LineStyle" />
+
 
             </LinearLayout>
 
-            <View style="@style/LineStyle" />
+
 
 
             <LinearLayout
