--- a/app/src/main/res/layout/activity_truck_release.xml
+++ b/app/src/main/res/layout/activity_truck_release.xml
@@ -343,13 +343,28 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="12dp"
-                    android:text="备注说明"
-                    android:textColor="@color/black_color"
-                    android:textSize="14sp" />
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="备注说明"
+                        android:textColor="@color/black_color"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:text="(最多200字)"
+                        android:textColor="@color/light_gray_color"
+                        android:textSize="10sp"/>
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -363,6 +378,9 @@
                         android:layout_marginRight="12dp"
                         android:background="@null"
                         android:hint="有什么想和车主说的？"
+                        android:inputType="textMultiLine"
+                        android:minLines="2"
+                        android:lineSpacingExtra="2dp"
                         android:maxLength="200"
                         android:paddingBottom="12dp"
                         android:paddingTop="12dp"
@@ -417,6 +435,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="12dp"
+                android:visibility="gone"
                 android:background="@color/view_background_gray_color" />
         </LinearLayout>
     </ScrollView>
