--- a/app/src/main/res/layout/item_lv_news.xml
+++ b/app/src/main/res/layout/item_lv_news.xml
@@ -42,6 +42,7 @@
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
+                   android:visibility="invisible"
                    android:src="@mipmap/icon_newest"/>
 
                 <TextView
