--- a/app/src/main/res/layout/fragment_gallery_item.xml
+++ b/app/src/main/res/layout/fragment_gallery_item.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="#000"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
+
 <!--  -->
-    <ImageView
+    <com.appjumper.silkscreen.view.PinchImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:layout_gravity="center"
-        android:contentDescription="@string/app_name"
-        android:scaleType="centerCrop" />
+        android:layout_height="match_parent"
+        android:contentDescription="@string/app_name"/>
 
     <ProgressBar
         android:id="@+id/loading"
