--- a/app/src/main/res/drawable/shape_line_search.xml
+++ b/app/src/main/res/drawable/shape_line_search.xml
@@ -2,7 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#66FFCC"/>
+    <!--<solid android:color="#66FFCC"/>-->
+    <solid android:color="@color/while_color"/>
     <stroke android:color="@color/light_gray_color" android:width="0.6dp"/>
     <corners android:radius="40dp"/>
 
