--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
+
     <LinearLayout
         android:id="@+id/title_layout"
         android:layout_width="match_parent"
@@ -35,126 +35,150 @@
         </RelativeLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_below="@id/title_layout"
-        android:background="@color/while_color"
-        >
-        <ImageView
-            android:id="@+id/img_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/icon_logo"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="60dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_centerHorizontal="true" />
 
-        <EditText
-            android:id="@+id/et_name"
-            android:maxLength="11"
-            android:layout_marginTop="48dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@mipmap/icon_login02"
-            android:hint="手机号码"
-            android:inputType="number"
-            android:textColor="@color/black_color"
-            android:textSize="13sp"
-            android:textColorHint="@color/gray_color"
-            android:drawablePadding="41dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
-            android:background="@null"
-            />
-        <View
-            style="@style/LineStyle"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginBottom="12dp"
-            />
-        <EditText
-            android:id="@+id/et_pwd"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxLength="15"
-            android:inputType="textPassword"
-            android:drawableLeft="@mipmap/icon_password02"
-            android:gravity="center_vertical"
-            android:hint="请输入登录密码"
-            android:textColor="@color/black_color"
-            android:textSize="13sp"
-            android:textColorHint="@color/gray_color"
-            android:drawablePadding="41dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
-            android:background="@null"
-            />
-        <View
-            style="@style/LineStyle"
-            android:layout_below="@id/et_pwd"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="12dp"
-            />
-        <TextView
-            android:id="@+id/textview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:layout_marginLeft="26dp"
-            android:textColor="@color/gray_color"
-            android:textSize="11sp"
-            android:layout_marginTop="12dp"
-            android:text="点击登录，即代表您同意遵守丝网+的《用户协议》"
-            />
-        <Button
-            android:id="@+id/login_btn"
-            android:layout_below="@id/textview"
-            android:layout_width="match_parent"
-            android:layout_height="38dp"
-            android:background="@drawable/selector_login_btn"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
-            android:layout_marginTop="40dp"
-            android:text="登录"
-            android:textSize="15sp"
-            android:textColor="@color/while_color"
-            />
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="12dp"
-            android:gravity="center"
-            >
-            <TextView
-                android:id="@+id/btn_register"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="立即注册"
-                android:textColor="@drawable/text_theme_check_tv_color"
-                android:textSize="13sp"
-                android:padding="12dp"
-                />
-            <View
-                android:layout_width="1dp"
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#F7F7F9"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="12dp"
-                />
-            <TextView
-                android:id="@+id/tv_repassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="忘记密码？"
-                android:textColor="@drawable/text_theme_check_tv_color"
-                android:textSize="13sp"
-                android:padding="12dp"
-                />
-        </LinearLayout>
+                android:orientation="vertical"
+                android:layout_below="@id/title_layout"
+                android:background="@color/while_color"
+                >
+                <ImageView
+                    android:id="@+id/img_logo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/icon_logo"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="60dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_centerHorizontal="true" />
 
-    </LinearLayout>
+                <EditText
+                    android:id="@+id/et_name"
+                    android:maxLength="11"
+                    android:layout_marginTop="48dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@mipmap/icon_login02"
+                    android:hint="手机号码"
+                    android:inputType="number"
+                    android:textColor="@color/black_color"
+                    android:textSize="13sp"
+                    android:textColorHint="@color/gray_color"
+                    android:drawablePadding="41dp"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginRight="12dp"
+                    android:background="@null"
+                    />
+                <View
+                    style="@style/LineStyle"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginBottom="12dp"
+                    />
+                <EditText
+                    android:id="@+id/et_pwd"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLength="15"
+                    android:inputType="textPassword"
+                    android:drawableLeft="@mipmap/icon_password02"
+                    android:gravity="center_vertical"
+                    android:hint="请输入登录密码"
+                    android:textColor="@color/black_color"
+                    android:textSize="13sp"
+                    android:textColorHint="@color/gray_color"
+                    android:drawablePadding="41dp"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginRight="12dp"
+                    android:background="@null"
+                    />
+                <View
+                    style="@style/LineStyle"
+                    android:layout_below="@id/et_pwd"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginTop="12dp"
+                    />
+                <TextView
+                    android:id="@+id/textview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:layout_marginLeft="26dp"
+                    android:textColor="@color/gray_color"
+                    android:textSize="11sp"
+                    android:layout_marginTop="12dp"
+                    android:text="点击登录，即代表您同意遵守丝网+的《用户协议》"
+                    />
+                <Button
+                    android:id="@+id/login_btn"
+                    android:layout_below="@id/textview"
+                    android:layout_width="match_parent"
+                    android:layout_height="38dp"
+                    android:background="@drawable/selector_login_btn"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginRight="12dp"
+                    android:layout_marginTop="40dp"
+                    android:text="登录"
+                    android:textSize="15sp"
+                    android:textColor="@color/while_color"
+                    />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="12dp"
+                    android:gravity="center"
+                    >
+                    <TextView
+                        android:id="@+id/btn_register"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="立即注册"
+                        android:textColor="@drawable/text_theme_check_tv_color"
+                        android:textSize="13sp"
+                        android:padding="12dp"
+                        />
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:background="#F7F7F9"
+                        android:layout_marginTop="12dp"
+                        android:layout_marginBottom="12dp"
+                        />
+                    <TextView
+                        android:id="@+id/tv_repassword"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="忘记密码？"
+                        android:textColor="@drawable/text_theme_check_tv_color"
+                        android:textSize="13sp"
+                        android:padding="12dp"
+                        />
+                </LinearLayout>
+
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"/>
+
+
+                <TextView
+                    android:id="@+id/txtLoginWechat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_gravity="center_horizontal"
+                    android:text="微信登录"
+                    android:textColor="@drawable/text_theme_check_tv_color"
+                    android:textSize="13sp"
+                    android:padding="12dp" />
+
+            </LinearLayout>
+
+
+
 </RelativeLayout>
