--- a/app/src/main/res/layout/item_lv_province_line.xml
+++ b/app/src/main/res/layout/item_lv_province_line.xml
@@ -8,14 +8,14 @@
         android:id="@+id/txtName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/selector_text_bg_blue_white"
+        android:background="@drawable/selector_text_bg_gray_white"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
         android:text="河北"
         android:textSize="14sp"
-        android:textColor="@drawable/selector_text_white_black"/>
+        android:textColor="@color/text_black_color"/>
 
 
 </LinearLayout>
