--- a/app/src/main/res/layout/activity_transport_finish_deliver.xml
+++ b/app/src/main/res/layout/activity_transport_finish_deliver.xml
@@ -21,38 +21,21 @@
 
             <include layout="@layout/layout_freight_detail"/>
 
-            <LinearLayout
-                android:id="@+id/llRecord"
-                android:layout_width="match_parent"
+            <include layout="@layout/layout_selected_driver"/>
+
+            <TextView
+                android:id="@+id/txtPremium"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:visibility="gone"
-                android:background="@color/while_color"
-                android:orientation="vertical">
+                android:text="保险费用：100元，保额：50万，来自平安保险"
+                android:paddingLeft="12dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="12dp"
+                android:textSize="13sp"
+                android:textColor="@color/theme_color"/>
 
-                <TextView
-                    android:id="@+id/txtRecord"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="12dp"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:text="报价列表"
-                    android:textColor="@color/text_black_color"
-                    android:textSize="14sp"/>
+            <include layout="@layout/layout_freight_logistics_data"/>
 
-                <View style="@style/LineStyle"/>
-
-                <com.appjumper.silkscreen.view.MyListView
-                    android:id="@+id/lvRecord"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
-
-            <View
-                android:layout_width="1dp"
-                android:layout_height="1dp"
-                android:layout_marginTop="20dp"/>
 
         </LinearLayout>
     </ScrollView>
@@ -61,37 +44,36 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="6dp"
-        android:layout_marginTop="6dp"
         android:orientation="horizontal"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="6dp"
         android:paddingLeft="40dp"
         android:paddingRight="40dp">
 
         <TextView
-            android:id="@+id/txtIgnore"
+            android:id="@+id/btn0"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/selector_btn_blue"
             android:gravity="center"
-            android:paddingBottom="10dp"
             android:paddingTop="10dp"
-            android:text="忽略订单"
+            android:paddingBottom="10dp"
+            android:text="联系司机"
             android:textColor="@color/while_color"
             android:textSize="15sp" />
 
         <TextView
-            android:id="@+id/txtOffer"
+            android:id="@+id/btn1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
             android:layout_weight="1"
+            android:layout_marginLeft="50dp"
             android:background="@drawable/selector_btn_blue"
             android:gravity="center"
-            android:paddingBottom="10dp"
             android:paddingTop="10dp"
-            android:text="报价"
+            android:paddingBottom="10dp"
+            android:text="支付运费"
             android:textColor="@color/while_color"
             android:textSize="15sp" />
 
